--- a/dot_files/.eslintrc.json
+++ b/dot_files/.eslintrc.json
@@ -14,6 +14,7 @@
         "semi": "error",
         "arrow-spacing": "error",
         "no-var": "error",
-        "prefer-const": "error"
+        "prefer-const": "error",
+        "no-console": "error"
     }
 }
