ghosty config update

--- a/ghostty.config
+++ b/ghostty.config
@@ -1,4 +1,4 @@
 theme = Monokai Classic
-font-family = Inconsolata
+font-family = Inconsolata Nerd Font
 font-size = 18
-window-padding-x = 8
+window-padding-x = 12
